--- a/Research into the promising direction of video games/reserch_video_games.ipynb
+++ b/Research into the promising direction of video games/reserch_video_games.ipynb
@@ -6310,14 +6310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## General conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
+    "## General conclusion\n",
     "<div style=\"border:solid blue 4px; padding: 20px\">\n",
     "\n",
     "**The aim of the project was**\n",
